--- a/social/social.html
+++ b/social/social.html
@@ -35,24 +35,23 @@
                 <img src="igpost2.jpg"  class="zi3"/>
             </a>
         </div>
-    </div>
-
-    <footer class="primary_red zi2">
-        <div class="column large6">
-            <h3>Get In Touch</h3>
-            <h6>Frequently Asked Question</h6>
-            <h6>Privacy Policy</h6>
-            <h6>Follow Us On</h6>
+    </div>  
+      <div class="footer primary_red">
+        <div class="column large6 medium6 small12">
+            <h5>Get In Touch</h5>
+            <p>Frequently Asked Question</p>
+            <p>Privacy Policy</p>
+            <p>Follow Us On</p>
             <a href="https://www.facebook.com/tedxrevauniversity/"><button style="background-color: #1877f2; color: #ffffff;" class="zi3">Facebook</button></a>
             <a href="https://www.instagram.com/tedxrevauniversity/"><button style="background-color: #7232bd; color: #ffffff;" class="zi3">Instagram</button></a>
             <a href="https://youtu.be/8FzmHqF1trs"><button style="background-color: #282828; color: #ffffff;" class="zi3">YouTube</button></a>
         </div>
-        <div class="column large6">
+        <div class="column large6 medium6 small12">
             
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15542.89373821591!2d77.6346617!3d13.1166989!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdee225fe28f600f6!2sREVA+University!5e0!3m2!1sen!2sin!4v1522677320198" style="border: none; border-radius:10px; height:50%; width: 100%; " allowfullscreen="yes"></iframe>
              
         </div>
-    </footer>
+    </div>     
 
 </div>
 
