Removed Footer From Speakers Page

--- a/index.html
+++ b/index.html
@@ -72,20 +72,53 @@
             </div>
         </div>
         <div class="primary_inverted">
+            <div class="page_container">
+                <h1>Previously on</h1>
+                <h4><span style="color: red;">TEDx</span>REVAUniversity</h4>
+                <div class="column large6 medium6 small12">
+                    <p class="page_container" style="text-align: justify;">
+                        <span style="color: red;">TEDx</span>REVAUniversity 2019 was a really great event which featured 10 speakers, 3 performances and lots of fun and motivation.<br><br>
+                        It was based on fables, which are short stories that feature inanimate objects and forces of nature that are brought to life and that illustrates or leads to 
+                        a particular moral lesson and takes us through a lifelike journey, portraying good and evil and we absorb an understanding of importance of right and wrong.<br><br>
+                        <span style="color: red;">TEDx</span>REVAUniversity 2019 was the first ever TEDx event in REVA University and surely many more are going to follow on it and 
+                        it is already on it's way with the announcement of <span style="color: red;">TEDx</span>REVAUniversity 2020.<br><br><br><br>
+                    </p>
+                </div>
+                <div class="column large6 medium6 small12">
+                    <iframe width="100%" height="80%" src="https://www.youtube.com/embed/videoseries?list=PLsRNoUx8w3rMSmPboKL8Xn9kkzWAAgo33" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
             <div class="page_container ta_center">
-                <br><br><br><br><br><br><br><br>
+                <br><br><br><br>
                 <div class="column large9 medium9 small12">
                     <h1>Speakers</h1><br>
-                    <p class="ta_left" style="font-size: 22px;">
+                    <p style="font-size: 22px; text-align: justify;">
                         Believers. Achievers. TED speakers are the essence of a TED event. From sharing experiences to reforming young minds, TED speakers play a vital role in any TED event. Presenters can be parts of billion dollar companies, or even emerging small-scale artists. They are motivated and driven to make a change, significant or not. Realising potential and making it a part of their lives. They share what it is like to be themselves, and their challenges and solutions. With speakers of the highest diversity, TEDxREVAUniversity aims to deliver most inspiring, powerful speeches of the century.
                     </p>
                     <br><br>
-                    <a href="./speaker/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
+                    <a href="./speakers/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
                 </div>
                 <br><br><br><br><br><br><br><br>
             </div>
         </div>
    
+        <div class="footer primary_red">
+            <div class="column large6 medium6 small12">
+                <h5>Get In Touch</h5>
+                <p>Frequently Asked Question</p>
+                <p>Privacy Policy</p>
+                <p>Follow Us On</p>
+                <a href="https://www.facebook.com/tedxrevauniversity/"><button style="background-color: #1877f2; color: #ffffff;" class="zi3">Facebook</button></a>
+                <a href="https://www.instagram.com/tedxrevauniversity/"><button style="background-color: #7232bd; color: #ffffff;" class="zi3">Instagram</button></a>
+                <a href="https://youtu.be/8FzmHqF1trs"><button style="background-color: #282828; color: #ffffff;" class="zi3">YouTube</button></a>
+            </div>
+            <div class="column large6 medium6 small12">
+                
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15542.89373821591!2d77.6346617!3d13.1166989!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdee225fe28f600f6!2sREVA+University!5e0!3m2!1sen!2sin!4v1522677320198" style="border: none; border-radius:10px; height:50%; width: 100%; " allowfullscreen="yes"></iframe>
+                 
+            </div>
+        </div>     
 </div>
         <div class="sidepanel_container" id="side1" style="background: #2e2e2e55;">
             <div class="sidepanel_content zi3 right" id="modct1" style="background: #2e2e2e;">
