--- a/index.html
+++ b/index.html
@@ -51,28 +51,9 @@
 -->
 
 
-        <div class="primary_white">
-            <br><br><br><br><br><br>
-            <div class="page_container ta_center">
-                <h1>About</h1><br><br>
-                    <div class="column large6 medium12 small12 zi2 left" style="min-height: 400px; padding: 50px">
-                        <p class="tagline ta_left">TED: Technology, Entertainment, Design</p>
-                        <p class="ta_left">
-                            Going by the slogan, “Ideas worth spreading,'' TED is a harmonising platform providing opportunities for everyone under the sun. It is delves into deeper learning and unique ideas meant to spread ideas all across the world. It can be individualistic or even team effort, but it is a non-profit organisation, striving to make the world a better place. TED has branched out into various forums, like TEDGlobal, TEDx, TED-Ed, etc. All these are hosted on online digital streaming platforms like YouTube, Netflix, etc. TED is now an ever-growing community filled with ideas from different, opportunistic people focusing on the betterment of the society.
-                        </p>
-                    </div>
-                    <div class="column large6 medium12 small12 zi2 left" style="min-height: 400px; padding: 50px">
-                        <p class="tagline ta_left">TEDxREVAUniversity</p>
-                        <p class="ta_left">
-                            An independently organized TED event, focused on spreading ideas and providing platforms to the experienced and non-experienced, while allowing over 10,000+ students to have a taste of TED and its ever-inspiring and exciting nature. A list of powerful speakers lined up to influence and make you rethink your whole existence. Challenging your ideals, ideologies and more. Open up your mind to something beyond the ordinary while keeping in mind a theme. All of this and more at the Reva University campus, Bangalore
-                        </p>
-                    </div>
-                    <br><br><br><br><br><br><br><br><p style="padding: 50px; color: transparent">.</p>
-
-            </div>
-        </div>
+        <br><br><br><br>
         <div class="primary_inverted">
-            <div class="page_container">
+            <div class="page_container" id="last">
                 <h1>Previously on</h1>
                 <h4><span style="color: red;">TEDx</span>REVAUniversity</h4>
                 <div class="column large6 medium6 small12">
@@ -87,12 +68,15 @@
                 <div class="column large6 medium6 small12">
                     <iframe width="100%" height="80%" src="https://www.youtube.com/embed/videoseries?list=PLsRNoUx8w3rMSmPboKL8Xn9kkzWAAgo33" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-            </div>
-
-            <div class="page_container ta_center">
+                <br><br>
+                <a href="./2019.html" style="text-decoration: none;"><button style="font-size: 24px; padding: 30px;" class="primary_red center">Watch all talks from TEDxREVAUniversity 2019</button style="font-size: 22px;"></a>
                 <br><br><br><br>
+            </div>
+            <hr style="height: 4px; border: none; background: linear-gradient(45deg, red, orange);">
+            <div class="page_container ta_center" id="speakers">
+                <br><br><br><br>
+                <h1>Speakers</h1><br>
                 <div class="column large9 medium9 small12">
-                    <h1>Speakers</h1><br>
                     <p style="font-size: 22px; text-align: justify;">
                         Believers. Achievers. TED speakers are the essence of a TED event. From sharing experiences to reforming young minds, TED speakers play a vital role in any TED event. Presenters can be parts of billion dollar companies, or even emerging small-scale artists. They are motivated and driven to make a change, significant or not. Realising potential and making it a part of their lives. They share what it is like to be themselves, and their challenges and solutions. With speakers of the highest diversity, TEDxREVAUniversity aims to deliver most inspiring, powerful speeches of the century.
                     </p>
@@ -101,6 +85,24 @@
                 </div>
                 <br><br><br><br><br><br><br><br>
             </div>
+            <hr style="height: 4px; border: none; background: linear-gradient(45deg, orange, red);">
+            <div class="page_container ta_center" id="about">
+                <br><br><br><br>
+                <h1>About</h1><br>
+                <div class="column large9 medium9 small12">
+                    <p style="font-size: 20px; text-align: justify; padding: 50px">
+                        TEDxREVAUniversity is an independently organised TED event. This event is an collective endeavour of students from different schools of REVA University. 
+                        The aim of this event is to share great stories and diversified ideas with our community of 10,000+ students, faculties, and staff in order to inspire 
+                        them to innovate and bring the change they want to see in the world. The event will take place in the newly renovated, state of the art, Kuvempu Auditorium 
+                        in REVA University, Bengaluru. The event will feature a number of speakers from various disciplines and cultures, who will narrate their stories and share 
+                        their ideas with people who seek a deeper understanding of the world. We believe and promote TED’s mission of 'spreading ideas’ and their agenda to make 
+                        great ideas accessible and spark conversations. TEDxREVAUniversity will present ideas which are powerful enough to change attitudes, lives and, ultimately, the world.                    </p>
+                        <a href="./team/team.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Know More About Us</button style="font-size: 22px;"></a>
+                    <br><br>
+                </div>
+                <br><br><br><br>
+        </div>
+
         </div>
    
         <div class="footer primary_red">
@@ -118,19 +120,19 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15542.89373821591!2d77.6346617!3d13.1166989!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdee225fe28f600f6!2sREVA+University!5e0!3m2!1sen!2sin!4v1522677320198" style="border: none; border-radius:10px; height:50%; width: 100%; " allowfullscreen="yes"></iframe>
                  
             </div>
-        </div>     
+        </div>
 </div>
         <div class="sidepanel_container" id="side1" style="background: #2e2e2e55;">
             <div class="sidepanel_content zi3 right" id="modct1" style="background: #2e2e2e;">
                 <button class="primary_red right ta_center mod_close_btn" onclick="closeside1();">X</button><br><br><br>
                 <div class="page_container">
                     <a href="index.html"><div class="large12 panel_item">Home</div></a>
-                    <a href="speakers/speaker1.html"><div class="large12 panel_item">Speakers</div></a>
                     <a href="partners/partner.html"><div class="large12 panel_item">Partners</div></a>
+                    <a href="#last"><div class="large12 panel_item" onclick="closeside1();">Watch Previous Talks</div></a>
+                    <a href="#speakers"><div class="large12 panel_item" onclick="closeside1();">Speakers</div></a>
                     <a href="index.html"><div class="large12 panel_item">Schedule</div></a>
-                    <a href="index.html"><div class="large12 panel_item">About</div></a>
+                    <a href="#about"><div class="large12 panel_item" onclick="closeside1();">About</div></a>
                     <a href="social/social.html"><div class="large12 panel_item">Social</div></a>
-                    <a href="2019.html"><div class="large12 panel_item">Watch Previous Talks</div></a>
                 </div>
             </div>
         </div>
