--- a/speakers/speaker1.html
+++ b/speakers/speaker1.html
@@ -23,28 +23,12 @@
         </div>  
 <br>
         <div class="page_container">
-            <img src="shiv.png" alt="" class="spkimg center">
+            <img src="Jadav-Payeng.jpg" alt="" class="spkimg center">
         </div>
-        <p class="bottom-left"><span style="color: red">Shivendra </span>Saurav</p> 
+        <p class="bottom-left"><span style="color: red">Jadav  </span>Payeng</p> 
         <button class="bottom-l" onclick="openmod1();">Know More</button>
-        <a href="speaker3.html" class="c-left "><i class="button circular ms-Icon ms-Icon--Back " aria-hidden="true"></i></a>
-        <a href="speaker2.html" class="c-right "><i class="button circular ms-Icon ms-Icon--Forward " aria-hidden="true"></i></a>
-
+        
     </body>
-    <div class="modal_container" id="mod1">
-        <div class="modal_content primary_white zi3" id="modct1">
-            <div class="dialogue_pane large12">
-                <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
-            </div>
-            <div class="page_container">
-                <h2>Shivendra Saurav</h2>
-                <br><br>
-                <p style="font-size: 20px;">
-                    I have the ability to solve any programming or design problem based on the criteria provided. Maybe you want a music app, maybe you want a web page for your brand, or maybe you want to make Conway's Game Of Life, I can do all that and much more 
-                </p>
-            </div>
-        </div>
-    </div>
    
 
 </div>
@@ -61,6 +45,188 @@
             <a href="../index.html"><div class="large12 panel_item">About</div></a>
             <a href="../social/social.html"><div class="large12 panel_item">Social</div></a>
             <a href="../2019.html"><div class="large12 panel_item">Watch Previous Talks</div></a>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod1" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Jadav Payeng</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Jadav Payeng better known as The Forest Man of India, lead to the creation of the Molai Forest
+                named after him near Kokilamukh of Jorhat, Assam which encompasses an area of about 1,360
+                acres. A green warrior who provided home to over a hundred deer, wild boars, few Royal Bengal
+                Tigers and many more. His journey started after he witnessed wildlife suffering because of lack of
+                trees and decided to take matters into his own hands, a young boy just around 16 years old, on a
+                sandbar of the river Brahmaputra started working by planting 20 bamboo seedlings, later that same
+                year he got together with forestry division of Golaghat district on a rejuvenation project which
+                lasted 5 years and after completion he choose to stay back not just to look after the land, but also
+                continuing to plant more trees in effort to transform the area, this went on for more than 30 years
+                and the rest is history.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod2" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Dr. Rajah Vijaykumar</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Dr Vijaykumar has a basic bachelor’s degree in science, post-graduation in Microelectronics a
+Doctoral of Science in Medical Engineering, a Master of Business Administration in Corporate
+Crisis Management. His impressive profile full of scientific jargon(s) that a common man cannot
+comprehend. He holds various patents useful in health care and other fields of life from a very
+young age. The Chairman of Organisation de Scalene Foundation, a passionate scientific researcher,
+innovator and a fantastic speaker. For nearly two decades he has been working on regenerative
+tissue engineering, artificial intelligence and neural networks in medical diagnosis and engineering.
+Out of many notable achievements he is best known for developing CYTOTRON®, an anti-cancer
+kit which got designation of “Breakthrough Device” from the USFDA
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod3" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Vaibhav Chhabra</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Vaibhav is a Mechanical Engineer by profession and a carpenter by passion, graduate from Boston
+University, Spent two years at EyeNetra building eye diagnostics devices, he then co-founded
+Maker’s Asylum, a community space focussed on fostering innovation through hands on learning it
+has various labs that are co-located in order to facilitate prototyping of ideas that are
+interdisciplinary in nature. Maker’s Asylum is the first community Makerspace in India. His various
+initiatives towards supporting the free thinkers and makers of the society is astonishing. He is also
+an instructor at MIT REDX, MIT Media Lab’s Health-tech lab in India.
+
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod4" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>N M Pratap</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Prathap is a young scientist who has impressed the world with his innovations, the 22-year-old is
+better known as Drone Prathap. Inspired by eagles in the sky he started building drones when he
+was just 14 years old since then he hasn’t stopped doing what he loves. To date he had built more
+than 600 drones using very less money and e-waste by teaching himself about the technologies
+associated with drone building. He has been invited over by more than 80 countries to showcase his 
+self-made projects. His creation has already saved a life and his continued innovations in this field
+is believed to help many more. Prathap already has many notable achievements and had also
+worked on border security telegraph, cryptography in drone networking system, drone in traffic
+management and National Socio Defence areas.
+            </p>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal_container" id="mod5" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Dr. Rajendra Singh</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Rajendra Singh is a water conversationalist from Rajasthan, India, He is a graduate in Ayurvedic
+Medicine, post-graduate in Hindi Literature, and popularly known as Water Man of India. He had
+been honoured with many awards including Stockholm Water Prize 2015, an award known as the
+Nobel prize for water. Currently he is the Chairman of Tarun Bharat Sangh, NGO along with this he
+is heading a national network of organisations working on water issues. In the past years he has
+helped in successful creation of 11,800 Johads, large crescent-shaped structures made of mud and
+rocks in more than 500 villages across the country. This water conversation technique has helped
+him revive 14 rivers and water bodies including Aravari, Tapi and Sarsa in Rajasthan, Mahakali in
+Maharashtra and Hirehalla in Karnataka.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod6" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Mahesh Narayanan</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Mahesh Narayanan is an Indian Film Editor, Screenwriter, and director who mostly works in
+                Malayalam cinema. He started working as a small advert editor, subsequently progressed to edit
+                documentaries and short films, later he entered film industry with Rathri Mazha, which won five
+                Kerala State Awards. After establishing himself as an accomplished and successful editor, Mahesh
+                ventured into writing Mili, a Malayalam film. In 2017 Mahesh directed his debut feature Take Off a
+                drama thriller film, which was a blockbuster at the box office and grabbed Best Debut Director’s
+                Award For him at International Film Festival of India.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod7" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Franz Gastler</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Franz grew up in Edina, Minnesota, and has been living in India since 2007. In 2008, he co-founded
+Yuwa, an organisation that uses girls’ football to combat child marriage, illiteracy, and human
+trafficking in the rural regions of Jharkhand. Franz and Yuwa have won awards from Nike
+Gamechangers, Yahoo, Barclays, Times Now, NDTV, Ashoka Changemakers, and have been
+featured in countless media including BBC, Bloomberg Businessweek, Times of India, Hindustan
+Times, Outlok, The Hindu, Indian Express, Mint, CNN-IBN, Tehelka, People Magazine and many
+more.
+
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="modal_container" id="mod8" style="background: #2e2e2e55;">
+    <div class="modal_content primary_white zi3" id="modct1">
+        <div class="dialogue_pane large12">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+        </div>
+        <div class="page_container">
+            <h2>Amit Goel</h2>
+            <br><br>
+            <p style="font-size: 20px;">
+                Amit is passionate about bringing actionable #FinTech focused insights, a global FinTech platform
+and index plus other innovations to the ecosystem. Refinitiv (Thomson Reuters and Blackstone
+group co.) recognized Amit as one of the global #RefinitivSocial100 top finance influencers and he
+is also recognised as the Asia top 100 FinTech people by Visa, E&Y and Next Money. Amit has
+built MEDICI (formerly LTP) which is considered the global #1 platform for everything FinTech. It
+has profiles of 12k FinTech start-ups from all over the world segmented into 40 categories and
+focused research. Amit has a strong background in strategy and market analysis and has advised
+clients (ranging from start-ups to Fortune 500) in payments, commerce and technology.
+
+            </p>
         </div>
     </div>
 </div>
