Updated TED Images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
                 <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
             </button>
-            <div style="font-family: 'Segoe UI' ,Arial, Helvetica, sans-serif;">
-                <span style="color: red;">TEDx</span><span style="color: white">REVAUniversity</span><br>
+            <div style="font-family: Arial, Helvetica, sans-serif;">
+                <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
                 <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
             </div>
         </div>        
@@ -51,11 +51,11 @@
 -->
 
 
-        <br><br><br><br>
+        <br><br>
         <div class="primary_inverted">
             <div class="page_container" id="last">
                 <h1>Previously on</h1>
-                <h4><span style="color: red;">TEDx</span>REVAUniversity</h4>
+                <h4><span style="color: red;">TEDx</span>REVAUniversity</h4><br><br>
                 <div class="column large6 medium6 small12">
                     <p class="page_container" style="text-align: justify;">
                         <span style="color: red;">TEDx</span>REVAUniversity 2019 was a really great event which featured 10 speakers, 3 performances and lots of fun and motivation.<br><br>
@@ -68,29 +68,28 @@
                 <div class="column large6 medium6 small12">
                     <iframe width="100%" height="80%" src="https://www.youtube.com/embed/videoseries?list=PLsRNoUx8w3rMSmPboKL8Xn9kkzWAAgo33" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <br><br>
                 <a href="./2019.html" style="text-decoration: none;"><button style="font-size: 24px; padding: 30px;" class="primary_red center">Watch all talks from TEDxREVAUniversity 2019</button style="font-size: 22px;"></a>
-                <br><br><br><br>
+                <br><br>
             </div>
             <hr style="height: 4px; border: none; background: linear-gradient(45deg, red, orange);">
             <div class="page_container ta_center" id="speakers">
-                <br><br><br><br>
+                <br><br><br><br><br><br><br><br>
                 <h1>Speakers</h1><br>
                 <div class="column large9 medium9 small12">
                     <p style="font-size: 22px; text-align: justify;">
                         Believers. Achievers. TED speakers are the essence of a TED event. From sharing experiences to reforming young minds, TED speakers play a vital role in any TED event. Presenters can be parts of billion dollar companies, or even emerging small-scale artists. They are motivated and driven to make a change, significant or not. Realising potential and making it a part of their lives. They share what it is like to be themselves, and their challenges and solutions. With speakers of the highest diversity, TEDxREVAUniversity aims to deliver most inspiring, powerful speeches of the century.
                     </p>
-                    <br><br>
+                    <br><br><br><br>
                     <a href="./speakers/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
                 </div>
                 <br><br><br><br><br><br><br><br>
             </div>
             <hr style="height: 4px; border: none; background: linear-gradient(45deg, orange, red);">
             <div class="page_container ta_center" id="about">
-                <br><br><br><br>
+                <br><br><br><br><br><br>
                 <h1>About</h1><br>
                 <div class="column large9 medium9 small12">
-                    <p style="font-size: 20px; text-align: justify; padding: 50px">
+                    <p style="font-size: 20px; text-align: justify;">
                         TEDxREVAUniversity is an independently organised TED event. This event is an collective endeavour of students from different schools of REVA University. 
                         The aim of this event is to share great stories and diversified ideas with our community of 10,000+ students, faculties, and staff in order to inspire 
                         them to innovate and bring the change they want to see in the world. The event will take place in the newly renovated, state of the art, Kuvempu Auditorium 
@@ -100,7 +99,7 @@
                         <a href="./team/team.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Know More About Us</button style="font-size: 22px;"></a>
                     <br><br>
                 </div>
-                <br><br><br><br>
+                <br><br><br><br><br><br><br>
         </div>
 
         </div>
