--- a/partners/partner.html
+++ b/partners/partner.html
@@ -9,20 +9,21 @@
         <link href="../extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
-    <body class="primary_inverted">
+    <body style="background: white;">
 <div id="body">
     <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
         <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
             <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
         </button>
         <div style="font-family: 'Segoe UI' ,Arial, Helvetica, sans-serif;">
-            <span style="color: red;">TEDx</span><span style="color: white">REVAUniversity</span><br>
-            <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
+            <span style="color: red; font-size: 22px;">TEDx</span><span style="color: white; font-size: 22px;">REVAUniversity</span><br>
+            <span style="color: red; font-size: 16px;">x</span><span style="color: white; font-size: 16px;">=Independentaly Organized TED Event</span>
         </div>
-    </div>  
-        <h2>Partners</h2><br>
+    </div> 
+    <div class="page_container"> 
+        <h2>Partners</h2>
         <div class="title_sponsors center">
-            <h4>Title Partners</h4>
+<!--            <h4 class="ta_center">Title Partners</h4>-->
             <img src="./ds.png" class="column large2 medium4 small8">
             <img src="./ru.png" class="column large2 medium4 small8">
         </div>
@@ -36,6 +37,8 @@
             <img src="./pysal.jpg" class="column large2 medium4 small8">
             <img src="./pyacme.jpg" class="column large2 medium4 small8">
         </div>
+        
+    </div>            
         <div class="footer primary_red">
             <div class="column large6 medium6 small12">
                 <h5>Get In Touch</h5>
@@ -51,7 +54,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15542.89373821591!2d77.6346617!3d13.1166989!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdee225fe28f600f6!2sREVA+University!5e0!3m2!1sen!2sin!4v1522677320198" style="border: none; border-radius:10px; height:50%; width: 100%; " allowfullscreen="yes"></iframe>
                  
             </div>
-        </div>            
+        </div>
 </div>
 
 <div class="sidepanel_container" id="side1" style="background: #2e2e2e55;">
